# safe_robot

./: README.md
safe_robot/: CMakeLists.txt  package.xml  setup.py
safe_robot/configs/kuka_lwr/: kuka_lwr.xml
safe_robot/configs/nextage/: nextage.xml
safe_robot/launch/: kuka_lwr.launch  nextage.launch
safe_robot/msg/: Status.msg
safe_robot/scripts/: safe_robot.py  safe_robot_node.py
safe_robot/src/safe_robot/: checker.py  node.py  query.py  safe_robot.py  safe_robot_client.py
