<?xml version="1.0"?>
<package format="2">
  <name>safe_robot</name>
  <version>0.0.0</version>
  <description>The safe_robot package</description>
  <maintainer email="cmower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/safe_robot</url>
  <author email="cmower@ed.ac.uk">Christopher E. Mower</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>python-numpy</depend>
  <depend>exotica_core</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
